# vehicle-traffic-detection

./: .gitignore  MODEL_TRAINING.md  PROMPTS.md  README.md  pyproject.toml  training_mps.py
.streamlit/: config.toml
app/: streamlit_app.py
outputs/: density_thresholds.json  metrics.csv  sample_predictions.csv  sample_predictions.json
src/traffic_state/: __init__.py  config.py  density.py  detector.py  pipeline.py
