[project]
name = "bmd45-traffic-state"
version = "0.1.0"
description = "Vehicle detection on traffic-camera images with simple roadway-density labels (RF-DETR-Nano fine-tuned on BMD-45)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "supervision",
    "pillow",
    "numpy",
    "pandas",
    "streamlit",
]

[project.scripts]
traffic-state = "traffic_state.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traffic_state"]

[tool.uv]
# Training extras are optional and only needed to reproduce the fine-tune.
# Install with: uv pip install "rfdetr[train,loggers]"
package = true
